--- a/NCRDigitalReciept/AndroidManifest.xml
+++ b/NCRDigitalReciept/AndroidManifest.xml
@@ -42,6 +42,7 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
+        <!--
         <activity
             android:name="com.example.ncrmobilesolutions.MainActivity"
             android:configChanges="orientation|keyboardHidden"
@@ -50,7 +51,8 @@
             <intent-filter>
                 <action android:name="com.example.ncrmobilesolutions.UpdateMainMenu" />
             </intent-filter>
-        </activity>
+        </activity>
+        -->
         <activity
             android:name="com.example.ncrmobilesolutions.PushCallBakActivity"
             android:configChanges="orientation|keyboardHidden"
@@ -94,6 +96,8 @@
                 <category android:name="com.example.ncrmobilesolutions" />
             </intent-filter>
         </receiver>
+
+        <!-- End of  Push For Parse.com -->
 
         <activity
             android:name="com.example.ncrmobilesolutions.RecieptsActivity"
@@ -155,6 +159,9 @@
             android:name="com.example.ncrmobilesolutions.MainDrawerActivity"
             android:label="@string/title_activity_main_drawer"
             android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="com.example.ncrmobilesolutions.UpdateMainMenu" />
+            </intent-filter>
         </activity>
         <activity
             android:name="com.paypal.android.MEP.PayPalActivity"
