--- a/NCRDigitalReciept/project.properties
+++ b/NCRDigitalReciept/project.properties
@@ -11,6 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=Google Inc.:Google APIs:19
+target=Google Inc.:Google APIs (x86 System Image):19
 android.library.reference.1=../facebook-android-sdk-3.21.1/facebook
 #Micha1234
